--- a/demo/demojs4-变量交换.html
+++ b/demo/demojs4-变量交换.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  大家好,我是coderou,现在为各位演示如何使用git上传文件
+
+  <script>
+    var a=100;
+    var b=200;
+    console.log('a:'+a,'b:'+b);
+    var c=a;
+    var a=b;
+    var b=c;
+    console.log('a:'+a,'b:'+b);
+  </script>
 </body>
+
 </html>
