--- a/demo/demo12.14-4键盘按下移动.html
+++ b/demo/demo12.14-4键盘按下移动.html
@@ -19,8 +19,9 @@
       width: 100px;
       background-color: skyblue;
       position: absolute;
-      left: 33px;
-      top: 0;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
     }
   </style>
   <div class="box1"></div>
