--- a/demo/demo12.14-1.html
+++ b/demo/demo12.14-1.html
@@ -217,7 +217,7 @@
     })
   </script> -->
   <!-- ```event事件对象&鼠标定位 -->
-  <!-- <script>
+  <script>
     //==>event事件
     var box1 = document.querySelector('.box1')
     /* event事件对象：
@@ -249,7 +249,7 @@
       console.log(e.pageY);//距离文档边缘的距离(ie8不兼容,但是可以用(clientY+window.scrollTop)获取
       console.log(e.screenY);//到电脑屏墓边缘的距离
     }
-  </script> -->
+  </script>
   <!-- ```阻止默认事件 -->
   <!-- <script>
     /* 阻止默认事件：
